--- a/Configs/config.json
+++ b/Configs/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "!",
-    "token": "Nzg3NzQ3MjY1NzQ1NTE4NTk0.X9Zczw.qBovsrcBs4uZrXx8MbA5HlItwdU",
-    "ServerID": "787748255307792384" 
+    "token": "",
+    "ServerID": "" 
      
 }
