--- a/Configs/config.json
+++ b/Configs/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "!",
-    "token": "",
-    "ServerID": "" 
+    "token": "Nzg3NzQ3MjY1NzQ1NTE4NTk0.X9Zczw.UMwoDzToQrytJnMT-ytEZsoIkkQ",
+    "ServerID": "752900121045368855" 
      
 }
