--- a/Configs/config.json
+++ b/Configs/config.json
@@ -1,6 +1,6 @@
 {
-    "prefix": "#",
-    "token": "",
+    "prefix": "!",
+    "token": "Nzg3NzQ3MjY1NzQ1NTE4NTk0.X9Zczw.Es5YcIjmkFudNHLDf9CdcN838m4",
     "ServerID": "752900121045368855" 
      
 }
