added setup function

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN= Nzg3NzQ3MjY1NzQ1NTE4NTk0.X9Zczw.16R3XgQg-40oxBzJe2bZ8k8inVI
+TOKEN= ODkyMTY1MTA1MTg4NDc0OTcx.YVI7gA.IxrIqvqueIUwwjKT8YrXxH2Oung
